<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_ppo</name>
  <version>1.0.0</version>
  <description>
    TurtleBot3 PPO (Proximal Policy Optimization) package with continuous action space.
  </description>
  <maintainer email="user@example.com">User</maintainer>
  <license>Apache 2.0</license>
  <exec_depend>python3-pip</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>python3-pyqt5</exec_depend>
  <exec_depend>python3-pyqtgraph</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>turtlebot3_msgs</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
